--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -56,7 +56,9 @@
 	.span_1_of_4{
 		width: 49.2%;
 	}
-	
+	.services-section{
+	  width: 100%;
+	}
 	.services-section .span_1_of_4{
 		width: 46.2%;
 	}
