--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -58,6 +58,8 @@
 	}
 	.services-section{
 	  width: 100%;
+	  text-align: center;
+	  margin: auto;
 	}
 	.services-section .span_1_of_4{
 		width: 46.2%;
