--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -90,6 +90,11 @@
 }
 
 @media only screen and (max-width: 480px){
+	.services-section .span_1_of_4{
+		width: 100%;
+		text-align: center;
+		margin: auto;
+	}
 	.span_1_of_4{
 		width: 100%;
 	}
