--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -52,7 +52,16 @@
 }
 
 @media only screen and (max-width: 980px){
-	
+	.services-section{
+	  width: 100%;
+	  text-align: center;
+	  margin: auto;
+	}
+	.services-section .span_1_of_4{
+		width: 46.2%;
+		text-align: center;
+		margin: auto;
+	}
 	.span_1_of_4{
 		width: 49.2%;
 	}
