--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -52,11 +52,9 @@
 }
 
 @media only screen and (max-width: 980px){
-
+	
 	.span_1_of_4{
 		width: 49.2%;
-	}
-
 	}
 	.span_1_of_4:nth-child(3) {
 		margin-left: 0;
@@ -88,7 +86,11 @@
 		font-size: 2rem;
 	}
 }
-
+@media only screen and (max-width: 586px){
+	.services-section .span_1_of_4{
+		width: 47.5%;
+	}
+}
 @media only screen and (max-width: 480px){
 	.span_1_of_4{
 		width: 100%;
@@ -114,7 +116,10 @@
 		position: absolute;
 		bottom: 0%;
 	}
+	.services-section .span_1_of_4{
+		width: 100%;
 }
+
 @media only screen and (max-width: 375px){
 
 	header{
